<resources>
    <string name="ver_nbr">2.1.0</string>
    <string name="ver_build">2021 - Mar 13</string>
    <string name="app_name">PromptME</string>
    <string name="srv_name">Refresh</string>
    <string name="set_name">Settings</string>
    <string name="abt_name">About</string>
    <string name="ent_name">Entry</string>
    <string name="now_name">Date / Time</string>
    <string name="his_name">History</string>
    <string name="rec_name">Recurring</string>
    <string name="det_name">Detail</string>
    <string name="inv_name">Invite</string>
    <string name="isRegistered">Registered? </string>
    <string name="msgNoNet">Network Connection not found.</string>
    <string name="blank"/>
    <string name="processing">Processing&#8230;</string>
    <string name="lblUniqueName">Unique Name (Phone# or Email)</string>
    <string name="lblDisplayName">Display Name</string>
    <string name="lblNoContacts">No Contacts Found</string>
    <string name="lblDeepLinkWelcome">Welcome to PromptME</string>
    <string name="lblConnections">Connections</string>
    <string name="lblPromptMe">Prompt Me</string>
    <string name="lblWelcomeHelp">Tap on a connection to send a Prompt.</string>
    <string name="lblEarly">Early</string>
    <string name="lblLate">Late</string>
    <string name="mysteryme">Me</string>
    <string name="sup_title_name">MAKE A NAME</string>
    <string name="sup_detail_name">Enter any name you like, you can always change it later.</string>
    <string name="sup_title_path">PICK A SIGNUP</string>
    <string name="sup_detail_path">Phone or Email? This is how your friends can find you.</string>
    <string name="sup_instr_path">Tap on one of the choices to continue.</string>
    <string name="sup_detail_or">- or -</string>
    <string name="sup_edit_hint">Your Name</string>
    <string name="eml_detail_addr">Enter your email address</string>
    <string name="eml_detail_print">By tapping &quot;Send Confirmation&quot; above, PromptME will send you an email to confirm your email address.  On the next screen enter the received code, or choose &quot;Resend Code&quot; to receive a new email.</string>
    <string name="eml_detail_err">There is a problem sending out your verification code.  Make sure you are connected to the internet and using a valid email address.</string>
    <string name="eml_edit_hint">Your Email</string>
    <string name="sms_detail_addr">Enter your phone number</string>
    <string name="sms_detail_print">By tapping &quot;Send Confirmation&quot; above, PromptME will send you an SMS to confirm your phone number.  On the next screen enter the received code, or choose &quot;Resend Code&quot; to receive a new text.  Standard messaging rates apply to any SMS verification codes received.</string>
    <string name="sms_detail_err">There is a problem sending out your verification code.  Make sure you are connected to the internet and using a valid phone number.</string>
    <string name="sms_edit_hint">Your Phone</string>
    <string name="sol_title_name">Go Solo</string>
    <string name="sol_detail_name">By skipping email address or phone number for validation, you will be unable to send or receive Prompts with friends.  All other functionality remains the same.  To verify later, go to Settings and tap on Verification.</string>
    <string name="sol_detail_err">There is a problem sending out your verification code.  Make sure you are connected to the internet and using a valid phone number.</string>
    <string name="vrf_detail_code">Enter the code we sent to</string>
    <string name="vrf_edit_hint">Confirmation Code</string>
    <string name="vrf_detail_print">By tapping &quot;Create Account&quot; above, you agree to the PromptME Terms of Service, and to share your email address with PromptME, and that other users of PromptME can discover you by email address.</string>
    <string name="vrf_detail_err">There is a problem with your verification code.  Reenter the code or request a new code.  Make sure you are connected to the internet, too.</string>
    <string name="prf_Personal">Personal</string>
    <string name="prf_System">System</string>
    <string name="prf_Privacy">Privacy</string>
    <string name="prf_Use24Clock">Use 24 Hour Clock</string>
    <string name="prf_Use24ClockSum">Display time values using a 24 Hour clock format (not AM-PM).</string>
    <string name="prf_PickDateFormat">Select Date Format</string>
    <string name="prf_PickDateFormatSum">Dates are displayed in the form of %s</string>
    <string name="prf_PickDateFormatDefault">MM/dd/yyyy</string>
    <string name="prf_DisplayName">Your Name</string>
    <string name="prf_DisplayNameSum">Enter a different name for yourself.</string>
    <string name="prf_SleepCycle">Sleep Cycle</string>
    <string name="prf_SleepCycleSum">Help PromptME know when you are awake.</string>
    <string name="prf_SleepCycleDefault">2</string>
    <string name="prf_NameSort">Sort Contacts</string>
    <string name="prf_NameSortSum">Sort by %s.</string>
    <string name="prf_NameSortDefault">0</string>
    <string name="prf_VibrateOn">Prompt Vibrate</string>
    <string name="prf_VibrateOnSum">Vibrate on incoming Prompts.</string>
    <string name="prf_ContactsOk">Use Contacts</string>
    <string name="prf_ContactsOkSum">Ask to use local contacts if not yet allowed.</string>
    <string name="prf_Sounds">Prompt Sound</string>
    <string name="prf_SoundsSum">Sound of incoming Prompts.</string>
    <string name="prf_Snooze">Snooze</string>
    <string name="prf_SnoozeSum">Prompt notification snooze time: %s minutes.</string>
    <string name="prf_SnoozeDefault">60</string>
    <string name="prf_About">About</string>
    <string name="prf_Verify">Verification</string>
    <string name="prf_VerifySum">Allows Prompts between friends.</string>
    <string name="prf_FeaturePic">Display Picture</string>
    <string name="prf_FeaturePicSum">Add a picture of you to displayed in the App.</string>
    <string name="prf_NotificationTone">Prompt Notification</string>
    <string name="abt_author">by coolftc</string>
    <string name="abt_sysup">Up (v%s)</string>
    <string name="abt_privacy"><a href="http://www.zalicon.com/Prompt/privacy.html">PromptME Policy</a></string>
    <string name="wel_Pending">Pending (%d)</string>
    <string name="ent_DefaulMsg">No Message - Just an alert.</string>
    <string name="his_SortOrder">Sort Order</string>
    <string name="ctp_Addresses">Select Addresses and press Invite</string>
    <string name="ctp_edit_hint">Search</string>
    <string name="ctp_no_addresses">The selected contact does not have any phone numbers or email addresses.</string>
    <string name="inv_title_make">Make a Connection</string>
    <string name="inv_title_reject">Reject a Connection</string>
    <string name="inv_title_cancel">Cancel a Connection</string>
    <string name="inv_title_accept">Accept a Connection</string>
    <string name="inv_invitation">Invite someone you know to connect.</string>
    <string name="inv_unique">Phone number or Email address</string>
    <string name="inv_mirror_box">Make this connection a Mirror.*</string>
    <string name="inv_mirror_help">*Mirror connections receive all your Prompts. This allows a Prompt created with your phone to also show up on another device, like a tablet that you own.  Recommended to only select Mirror if this invite is to another device of yours.</string>
    <string name="ntf_channel_name_prompt">PromptMe Messages</string>
    <string name="ntf_channel_desc_prompt">These are the notes you have sent your future self.</string>
    <string name="ntf_channel_name_invite">PromptMe Invite</string>
    <string name="ntf_channel_desc_invite">Invitations to share prompt messages.</string>
    <string name="ntf_channel_name_friend">PromptMe Friend</string>
    <string name="ntf_channel_desc_friend">When friends accept your friend request.</string>
    <string name="ntf_channel_group_name">PromptMe Notifications</string>
    <string name="ntf_channel_group_desc">PromptMe notifications support all the features of PromptMe, like receiving prompts and other notifications.</string>
    <string name="btnConfirmSend">Send confirmation</string>
    <string name="btnEmailAddr">Email Address</string>
    <string name="btnPhoneNbr">Phone Number</string>
    <string name="btnSkip">Skip</string>
    <string name="btnConfirmCode">Create Account</string>
    <string name="btnResendCode">Resend Code</string>
    <string name="btnSoleStop">Return to Signup</string>
    <string name="btnSoleGo">Continue to App</string>
    <string name="img_contactpic">Contact Picture</string>
    <string name="img_recurring">Recurring Prompt</string>
    <string name="img_snooze">Snoozed Prompt</string>
    <string name="contact_pri">PromptME Connections</string>
    <string name="contact_inv">Pending Invitations</string>
    <string name="contact_all">Full Contacts - Tap on a contact to invite.</string>
    <string name="contact_more">++ Add More Connections ++</string>
    <string name="deliver">Deliver</string>
    <string name="version">Version</string>
    <string name="build_date">Build Date</string>
    <string name="os_version">Android Version</string>
    <string name="os_version_dtl">v%s (API = %d)</string>
    <string name="broadcast">Broadcast</string>
    <string name="ads">Ads</string>
    <string name="arrived">Prompt Arrived at</string>
    <string name="scheduled">Prompt Scheduled for</string>
    <string name="who_am_i">Who Am I</string>
    <string name="system">System</string>
    <string name="title_activity_exact_time">Pick a Time</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="day_after">Day(s) after first notification.</string>
    <string name="month_after">Month(s) after first notification.</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="sunday_abbr">Sun</string>
    <string name="monday_abbr">Mon</string>
    <string name="tuesday_abbr">Tue</string>
    <string name="wednsday_abbr">Wed</string>
    <string name="thursday_abbr">Thr</string>
    <string name="friday_abbr">Fri</string>
    <string name="saturday_abbr">Sat</string>
    <string name="forever">Forever</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="snooze">Snooze</string>
    <string name="ignore">Ignore</string>
    <string name="accept">Accept</string>
    <string name="waiting">Waiting</string>
    <string name="reject">Reject</string>
    <string name="invite">Invite</string>
    <string name="dismiss">Dismiss</string>
    <string name="linked">Linked</string>
    <string name="delink">Delink</string>
    <string name="copy">Copy</string>
    <string name="newWord">New</string>
    <string name="reply">Reply</string>
    <string name="occurrences">Occurrences.</string>
    <string name="times">Times</string>
    <string name="taptochoose">(tap to choose)</string>
    <string name="repeat">Repeat</string>
    <string name="problemTitle">Please Review</string>
    <string name="problemOccur">The occurrence interval of Days/Months must be at least 1.</string>
    <string name="problemDayWeek">There should be at least 1 day of the week selected.</string>
    <string name="problemEndRepeat">Pick an end date or a number of times to repeat the Prompt.</string>
    <string name="problemEndDate">If an end date is desired, a specific date must be chosen.</string>
    <string name="or">- or -</string>
    <string name="every">Every</string>
    <string name="dateof">Date of </string>
    <string name="stopafter">End After:</string>
    <string name="nbr_one">1</string>
    <string name="nbr_three">3</string>
</resources>