<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="prompt.settings"
        android:title="@string/prf_Personal">
        <EditTextPreference android:key="prompt.display"
            android:title="@string/prf_DisplayName"
            android:summary="@string/prf_DisplayNameSum"
            android:defaultValue="@string/blank">
        </EditTextPreference>
        <ListPreference android:key="prompt.sleepcycle"
            android:title="@string/prf_SleepCycle"
            android:dialogTitle="@string/prf_SleepCycle"
            android:summary="@string/prf_SleepCycleSum"
            android:entries="@array/sleepcycle"
            android:entryValues="@array/sleepcycle_values"
            android:defaultValue="@string/prf_SleepCycleDefault">
        </ListPreference>
        <Preference android:key="settings.verify"
            android:title="@string/prf_Verify"
            android:summary="@string/prf_VerifySum">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.coolftc.prompt"
                android:targetClass="com.coolftc.prompt.Signup">
            </intent>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:key="prompt.system"
        android:title="@string/prf_System">
        <Preference android:key="setting.sound"
            android:title="@string/prf_Sounds"
            android:summary="@string/prf_SoundsSum"
            android:ringtoneType="all"
            android:showDefault="true"
            android:showSilent="true"
            android:defaultValue="@string/prf_NotificationTone">
        </Preference>
        <SwitchPreferenceCompat android:key="settings.vibrate"
            android:title="@string/prf_VibrateOn"
            android:summary="@string/prf_VibrateOnSum"
            android:defaultValue="false">
        </SwitchPreferenceCompat>
        <CheckBoxPreference android:key="settings.contacts"
            android:title="@string/prf_ContactsOk"
            android:summary="@string/prf_ContactsOkSum"
            android:defaultValue="true">
        </CheckBoxPreference>
        <EditTextPreference android:key="settings.snooze"
            android:title="@string/prf_Snooze"
            android:summary="@string/prf_SnoozeSum"
            android:inputType="number"
            android:defaultValue="@string/prf_SnoozeDefault">
        </EditTextPreference>
        <CheckBoxPreference android:key="settings.clock24"
            android:title="@string/prf_Use24Clock"
            android:summary="@string/prf_Use24ClockSum"
            android:defaultValue="false">
        </CheckBoxPreference>
        <ListPreference android:key="settings.shortdate"
            android:title="@string/prf_PickDateFormat"
            android:dialogTitle="@string/prf_PickDateFormat"
            android:summary="@string/prf_PickDateFormatSum"
            android:entries="@array/dateorder"
            android:entryValues="@array/dateorder_values"
            android:defaultValue="@string/prf_PickDateFormatDefault">
        </ListPreference>
        <Preference
            android:title="@string/prf_About"
            android:summary="@string/blank">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.coolftc.prompt"
                android:targetClass="com.coolftc.prompt.About">
            </intent>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
