<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coolftc.prompt.SignupSolo">

    <TextView android:id="@+id/lblDisplayTitle" android:text="@string/sol_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/promptblueex"
        android:textSize="@dimen/lbl_big_size"
        android:textAlignment="center">
    </TextView>

    <TextView android:id="@+id/lblDisplayDesc" android:text="@string/sol_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblDisplayTitle"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:maxWidth="@dimen/signup_btn_width"
        android:textColor="@color/promptwhite"
        android:textAlignment="center"
        android:textSize="@dimen/lbl_med_size">
    </TextView>

    <Button android:id="@+id/btnSMSAuth" android:text="@string/btnSoleStop"
        style="@style/SignupButton"
        android:layout_below="@+id/lblDisplayDesc"
        android:layout_marginTop="24dp"
        android:onClick="SignupReturn">
    </Button>

    <TextView android:id="@+id/lblOr" android:text="@string/sup_detail_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSMSAuth"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:maxWidth="@dimen/signup_btn_width"
        android:textColor="@color/promptwhite"
        android:textAlignment="center">
    </TextView>

    <Button android:id="@+id/btnEmailAuth" android:text="@string/btnSoleGo"
        style="@style/SignupButton"
        android:layout_below="@+id/lblOr"
        android:layout_marginTop="15dp"
        android:onClick="SoleSignup">
    </Button>

    <TextView android:id="@+id/lblError_SO" android:text="@string/sol_detail_err"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEmailAuth"
        android:layout_margin="15dp"
        android:textColor="@color/promptwhite"
        android:visibility="gone">
    </TextView>



</RelativeLayout>
