<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coolftc.prompt.Recurrence">

    <TextView android:id="@+id/reptDelivery"
        tools:text="Deliver Today, Afternoon"
        android:textSize="@dimen/lbl_big_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">
    </TextView>

    <TextView android:id="@+id/lblDisplayBar" style="@style/HorzBar"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reptDelivery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="0dp"
        android:layout_width="0dp">

    </TextView>

    <Button android:id="@+id/reptBtnDaily" android:text="@string/daily"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="ShowDailyMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblDisplayBar"
        app:layout_constraintRight_toLeftOf="@+id/reptBtnWeekly"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp">
    </Button>

    <Button android:id="@+id/reptBtnWeekly" android:text="@string/weekly"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="ShowWeeklyMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblDisplayBar"
        app:layout_constraintRight_toLeftOf="@+id/reptBtnMonthly"
        app:layout_constraintLeft_toRightOf="@+id/reptBtnDaily"
        android:layout_marginTop="8dp">
    </Button>

    <Button android:id="@+id/reptBtnMonthly" android:text="@string/monthly"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="ShowMonthlyMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblDisplayBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/reptBtnWeekly"
        android:layout_marginTop="8dp">
    </Button>

    <!-- Each layout is exposed or hidden based on the button -->
    <RelativeLayout android:id="@+id/grpDayMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reptBtnDaily"
        app:layout_constraintLeft_toLeftOf="@+id/reptBtnDaily"
        app:layout_constraintRight_toRightOf="@+id/reptBtnMonthly"
        android:layout_marginTop="8dp"
        android:visibility="invisible">

        <TextView android:id="@+id/reptEvery"
            android:text="@string/every"
            android:textSize="@dimen/lbl_med_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="16dp">
        </TextView>

        <EditText android:id="@+id/reptPeriod"
            android:textSize="@dimen/txt_edit_size"
            android:inputType="number"
            android:text="@string/nbr_one"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reptEvery"
            android:layout_toEndOf="@+id/reptEvery">
        </EditText>

        <TextView android:id="@+id/reptEveryTime"
            android:text="@string/day_after"
            android:textSize="@dimen/lbl_med_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_toRightOf="@+id/reptPeriod"
            android:layout_toEndOf="@+id/reptPeriod"
            android:layout_marginTop="16dp">
        </TextView>
    </RelativeLayout>

    <!-- Each layout is exposed or hidden based on the button -->
    <RelativeLayout android:id="@+id/grpWeekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reptBtnDaily"
        app:layout_constraintLeft_toLeftOf="@+id/reptBtnDaily"
        app:layout_constraintRight_toRightOf="@+id/reptBtnMonthly"
        android:layout_marginTop="8dp"
        android:visibility="visible">

        <CheckBox android:id="@+id/reptSun"
            android:text="@string/sunday_abbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp">
        </CheckBox>
        <CheckBox android:id="@+id/reptMon"
            android:text="@string/monday_abbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reptSun"
            android:layout_toEndOf="@+id/reptSun"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        </CheckBox>
        <CheckBox android:id="@+id/reptTue"
            android:text="@string/tuesday_abbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reptMon"
            android:layout_toEndOf="@+id/reptMon"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        </CheckBox>
        <CheckBox android:id="@+id/reptWed"
            android:text="@string/wednsday_abbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reptTue"
            android:layout_toEndOf="@+id/reptTue"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        </CheckBox>
        <CheckBox android:id="@+id/reptThr"
            android:text="@string/thursday_abbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reptSun"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp">
        </CheckBox>
        <CheckBox android:id="@+id/reptFri"
            android:text="@string/friday_abbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reptSun"
            android:layout_toRightOf="@+id/reptThr"
            android:layout_toEndOf="@+id/reptThr"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        </CheckBox>
        <CheckBox android:id="@+id/reptSat"
            android:text="@string/saturday_abbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reptSun"
            android:layout_toRightOf="@+id/reptFri"
            android:layout_toEndOf="@+id/reptFri"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        </CheckBox>
    </RelativeLayout>

    <TextView android:id="@+id/reptUntil" android:text="@string/stopafter"
        android:textSize="@dimen/lbl_med_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/reptBtnDaily"
        app:layout_constraintBottom_toTopOf="@+id/grpExpire"
        android:layout_marginBottom="8dp">
    </TextView>

    <RelativeLayout android:id="@+id/grpExpire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/grpWeekly"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.20"
        app:layout_constraintLeft_toLeftOf="@+id/reptBtnDaily">

        <RadioButton android:id="@+id/reptOccur"
            android:onClick="RdoOccurOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </RadioButton>
        <EditText android:id="@+id/reptOccurNbr"
            android:textSize="@dimen/txt_edit_size"
            android:inputType="number"
            android:hint="@string/nbr_three"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reptOccur"
            android:layout_toEndOf="@+id/reptOccur"
            android:layout_alignBaseline="@id/reptOccur">
        </EditText>
        <TextView android:id="@+id/reptOccurLbl"
            android:text="@string/times"
            android:textSize="@dimen/lbl_med_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reptOccurNbr"
            android:layout_toEndOf="@+id/reptOccurNbr"
            android:layout_alignBaseline="@id/reptOccur">
        </TextView>

        <RadioButton android:id="@+id/reptPickDay"
            android:text="@string/dateof"
            android:textSize="@dimen/lbl_med_size"
            android:onClick="PickEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reptOccurLbl"
            android:layout_toEndOf="@+id/reptOccurLbl"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        </RadioButton>
        <TextView android:id="@+id/reptEndDate"
            android:text="@string/taptochoose"
            android:textSize="@dimen/lbl_med_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reptPickDay"
            android:layout_toEndOf="@+id/reptPickDay"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_alignBaseline="@id/reptOccur">
        </TextView>

        <TextView android:id="@+id/lblOr"
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reptPickDay"
            android:layout_alignLeft="@id/reptPickDay"
            android:layout_alignStart="@id/reptPickDay">
        </TextView>

        <RadioButton android:id="@+id/reptForever"
            android:text="@string/forever"
            android:textSize="@dimen/lbl_med_size"
            android:onClick="RdoForeverOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblOr"
            android:layout_alignLeft="@id/reptPickDay"
            android:layout_alignStart="@id/reptPickDay">
        </RadioButton>
    </RelativeLayout>

    <Button android:id="@+id/reptCan" android:text="@string/cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="PickCancelRecur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/reptFinish"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button android:id="@+id/reptFinish" android:text="@string/finish"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="PickFinishRecur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="@dimen/fin_margin"
        android:layout_marginEnd="@dimen/fin_margin"/>

</android.support.constraint.ConstraintLayout>
